# servefs

./: Cargo.toml  README.md
servefs-bin/: Cargo.toml
servefs-bin/src/: main.rs
servefs-cli/: Cargo.toml
servefs-cli/src/: main.rs
servefs-fuse/: Cargo.toml
servefs-fuse/src/: main.rs
servefs-lib/: Cargo.toml
servefs-lib/src/: lib.rs
servefs-server/: Cargo.toml
servefs-server/src/: main.rs
src/: main.rs
templates/: directory.html
