[package]
name = "servefs"
authors = ["Ella Pash"]
version = "0.1.0"
edition = "2021"
description = "A cli interface for a sqlite based filesystem"
license = "../MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
clap = { version = "4.0.10", features = ["derive"] }
servefs-lib = { path = "../servefs-lib" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "json" ] }
tokio = { version = "1", features = ["full"] }
