[package]
name = "servefs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "json" ] }
tokio = { version = "1", features = ["full"] }
path-absolutize = "3.0.13"
servefs-lib = { path = "../servefs-lib" }
tera = "1"
dirs = "4.0.0"
clap = { version = "4.0.10", features = ["derive"] }
